[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["olga-ivanko <o.ivanko@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^22.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
